# hadamer-cpp

./: .clang-format  .gitmodules  CMakeLists.txt
src/: Buffer.hpp  Buffer.impl.hpp  Control.hpp  Frac.hpp  Mesh.hpp  Mesh.impl.hpp  Types.hpp  Util.hpp  Util.impl.hpp
test/: BufferTest.cpp  ControlTest.cpp  MeshTest.cpp  UtilTest.cpp
